tests/spec/libsass_todo_tests/errors/unicode/mod.rs
//! Tests auto-converted from "sass-spec/spec/libsass-todo-tests/errors/unicode"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("unicode")
}

mod invalid;
